--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cached_video_player: ^2.0.4
+  cached_video_player_plus: ^3.0.3
   preload_page_view: ^0.2.0
   cached_network_image: ^3.4.1
 
